# oc-opsdevnz

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  publish.yml  sast.yml  test.yml
docs/: index.md  related-tools.md  release-process.md
docs/design/: README.md  authentication.md  fiscal-hosting-config-model.md  listing-and-inspection-queries.md  plan-and-diff-mode.md
docs/specs/: NFR.md  README.md  coverage.md  functional-requirements.md
docs/stories/: README.md  staging-testing.md
examples/: create_and_pay_expense.py  create_host.py  get_balance.py  list_expenses.py  whoami.py
src/oc_opsdevnz/: __init__.py  cli.py  oc_client.py  operations.py  secrets.py
src/oc_opsdevnz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli_parser.py  test_client.py  test_operations.py
