[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oc-opsdevnz"
version = "0.1.0"
description = "OpenCollective API helper (OpsDev.nz), staging-first with 1Password token resolution"
authors = [{ name = "John Billings" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "op-opsdevnz>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
