[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oc-opsdevnz"
version = "0.1.2"
description = "OpenCollective API helper (OpsDev.nz), staging-first with 1Password token resolution"
authors = [{ name = "John Billings" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "op-opsdevnz>=0.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.1",
    "pytest>=7.4",
    "respx>=0.20.0",
    "ruff>=0.6.0",
]

[project.scripts]
oc-opsdevnz = "oc_opsdevnz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
