[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oc-opsdevnz"
version = "0.2.4"
description = "OpenCollective API helper (OpsDev.nz), prod-default with 1Password token resolution"
authors = [{ name = "John Billings" }]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27.0",
    "op-opsdevnz>=0.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.1",
    "pytest>=7.4",
    "respx>=0.20.0",
    "ruff>=0.6.0",
]

[project.scripts]
oc-opsdevnz = "oc_opsdevnz.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "--color=yes --durations=10"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
